--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,5 +1,7 @@
 .card {
   background: gray;
-  width: 500px;
-  height: 500px;
+  width: auto;
+  height: 300px;
+  border-radius: 20px;
+  border: 2px solid black;
 }
