--- a/src/app.css
+++ b/src/app.css
@@ -17,3 +17,39 @@ html {
   padding: 0 60px;
   justify-content: space-between;
 }
+
+.lose-modal {
+  height: 300px;
+  width: 500px;
+  position: fixed;
+  background: white;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 20%;
+  border: 5px solid white;
+  background: rgb(76, 199, 148);
+}
+
+.lose-modal span {
+  font-size: 60px;
+  font-weight: bold;
+  color: white;
+}
+
+.lose-modal button {
+  border: none;
+  font-size: 28px;
+  background: none;
+  color: white;
+}
+
+.lose-modal button:hover {
+  cursor: pointer;
+  color: rgb(212, 212, 212);
+}
