--- a/src/app.css
+++ b/src/app.css
@@ -18,7 +18,7 @@ html {
   justify-content: space-between;
 }
 
-.lose-modal {
+.modal {
   height: 300px;
   width: 500px;
   position: fixed;
@@ -36,20 +36,20 @@ html {
   background: rgb(76, 199, 148);
 }
 
-.lose-modal span {
+.modal span {
   font-size: 60px;
   font-weight: bold;
   color: white;
 }
 
-.lose-modal button {
+.modal button {
   border: none;
   font-size: 28px;
   background: none;
   color: white;
 }
 
-.lose-modal button:hover {
+.modal button:hover {
   cursor: pointer;
   color: rgb(212, 212, 212);
 }
